--- a/src/catalog/core/templates/core/partials/user-dropdown.html
+++ b/src/catalog/core/templates/core/partials/user-dropdown.html
@@ -9,7 +9,7 @@
     <span class="hidden text-right lg:block">
       <span class="block text-sm font-medium text-black dark:text-white">{{ user }}</span>
     </span>
-    <span class="h-12 w-12 rounded-full bg-red"></span>
+    <span class="rounded-full bg-red"></span>
     <i :class="dropdownOpen ? 'fa-angle-up' : 'fa-angle-down'"
        class="hidden fill-current sm:block fas"></i>
   </a>
