--- a/src/catalog/projects/templates/projects/project_filter.html
+++ b/src/catalog/projects/templates/projects/project_filter.html
@@ -2,6 +2,7 @@
 
 {% load render_table from django_tables2 %}
 {% load crispy_forms_tags %}
+{% load static %}
 
 {% block article %}
   <div>
@@ -11,10 +12,20 @@
       </div>
     </div>
     {% if filter %}
-      <form action="" method="get" class="flex gap-8">
-        {% crispy filter.form %}
-      </form>
+    <form method="get" class="py-3 px-4 border mb-3 ">
+      <div class="flex flex-wrap gap-4">
+          {{ filter.form | crispy }}
+      </div>
+        <button class="btn bg-primary" type="submit">Search</button>
+    </form>
     {% endif %}
     {% render_table table %}
   </div>
 {% endblock article %}
+
+
+{% block body_javascript %}
+{{ block.super }}
+<script type="text/javascript" src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
+{{ filter.form.media }}
+{% endblock body_javascript %}
