feat: add breadcrumbs, project detail

--- a/src/catalog/core/templates/core/partials/navigation.html
+++ b/src/catalog/core/templates/core/partials/navigation.html
@@ -10,7 +10,7 @@
     <div class="flex items-center gap-8 2xsm:gap-7 text-sm font-bold">
       {% if user.is_authenticated %}
         <div>
-          <a href="{% url 'projects:project-list' %}">Projects</a>
+          <a href="{% url 'projects:project_list' %}">Projects</a>
         </div>
         {% include 'core/partials/user-dropdown.html' %}
       {% else %}
