--- a/src/catalog/theme/static_src/src/styles.css
+++ b/src/catalog/theme/static_src/src/styles.css
@@ -3,29 +3,85 @@
 @tailwind utilities;
 
 [x-cloak] {
-    display: none !important;
+  display: none !important;
 }
 
 .pagination {
-    @apply join gap-1;
+  @apply join gap-1;
 }
 
 .pagination>li {
-    @apply join-item;
+  @apply join-item;
 }
 
 .pagination li a {
-    @apply btn;
+  @apply btn;
 }
 
 .pagination>li.active a {
-    @apply btn-active;
+  @apply btn-active;
 }
 
 a {
-    @apply link link-primary;
+  @apply link link-primary;
 }
 
 .navbar a {
-    @apply no-underline;
+  @apply no-underline;
+}
+
+@layer components {
+  .alert {
+    @apply flex w-full bg-opacity-30 text-lg font-bold text-black border-l-4 md:p-7 border mb-1 items-center justify-between;
+  }
+
+  .alert.alert-success {
+    @apply border-green-500 bg-green-300;
+  }
+
+  .alert.alert-info {
+    @apply border-blue-500 bg-blue-300;
+  }
+
+  .alert.alert-error {
+    @apply border-red-500 bg-red-300;
+  }
+
+  .alert.alert-warning {
+    @apply border-yellow-500 bg-yellow-300;
+  }
+}
+
+.breadcrumb {
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+  min-height: min-content;
+  @apply flex py-2;
+}
+
+.breadcrumb li {
+  display: flex;
+  align-items: center;
+  text-transform: capitalize;
+}
+
+ul.breadcrumb>li+ ::before,
+ol.breadcrumb>li+ ::before {
+  content: "";
+  margin-left: 0.5rem;
+  margin-right: 0.75rem;
+  display: block;
+  height: 0.375rem;
+  width: 0.375rem;
+  --tw-rotate: 45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skew(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  opacity: 0.4;
+  border-top: 1px solid;
+  border-right: 1px solid;
+  background-color: transparent;
+}
+
+.select2-container .select2-selection--single {
+  height: 3.2rem !important;
 }
