--- a/src/catalog/projects/templates/projects/project_detail.html
+++ b/src/catalog/projects/templates/projects/project_detail.html
@@ -1,6 +1,10 @@
 {% extends 'app.html' %}
+{% load rules %}
 
 {% block article %}
+
+{% has_perm 'projects.change_project' request.user project as can_edit_project %}
+
 <div class="prose">
     <h1>{{ project.name }}</h1>
     <p>{{ project.description|default_if_none:'No description provided' }}</p>
@@ -68,7 +72,9 @@
     </table>
 </div>
 <div class="flex mt-5">
+    {% if can_edit_project %}
     <a class="btn btn-primary" href="{% url 'projects:project_update' pk=project.number %}">Edit</a>
+    {% endif %}
 </div>
 
 {% endblock article %}
