--- a/src/catalog/projects/templates/projects/project_form.html
+++ b/src/catalog/projects/templates/projects/project_form.html
@@ -1,7 +1,7 @@
-{% extends "base.html" %}
+{% extends "app.html" %}
 {% load crispy_forms_tags static %}
 
-{% block content %}
+{% block article %}
     <h3 class="text-4xl mb-5">{{ object }}</h3>
     <div class="flex gap-5 mb-5">
     </div>
