--- a/src/dms/templates/base.html
+++ b/src/dms/templates/base.html
@@ -1,3 +1,3 @@
-{% extends 'core/base.html' %} {% load static %} {% block title %} dmsue {%
-endblock title %} {% block description %} NINA Dataset dmsue {% endblock
-description %}
+{% extends 'core/base.html' %}
+{% load static %}
+{% block title %}DMS{% endblock title %}
