chg: remove topics

--- a/src/dms/projects/templates/projects/project_detail.html
+++ b/src/dms/projects/templates/projects/project_detail.html
@@ -19,8 +19,8 @@
         </thead>
         <tbody>
             <tr>
-                <td>Topics</td>
-                <td>{{ project.topics.all }}</td>
+                <td>Tags</td>
+                <td>{{ project.tags.all }}</td>
             </tr>
             <tr>
                 <td>Category</td>
