--- a/src/dms/templates/base_filter.html
+++ b/src/dms/templates/base_filter.html
@@ -8,8 +8,7 @@
   <div>
     <div class="flex my-5 justify-between items-center">
       <h1 class="font-bold text-4xl">{% block page-title %}{% endblock %}</h1>
-      <div class="flex">
-      </div>
+      {% block page-actions %}{% endblock page-actions %}
     </div>
     {% if filter %}
     <form method="get" class="py-3 px-4 border mb-3 ">
