--- a/src/dms/surveys/templates/surveys/survey_detail.html
+++ b/src/dms/surveys/templates/surveys/survey_detail.html
@@ -18,6 +18,7 @@
 <!-- SurveyJS Form Library resources -->
 <script src="https://unpkg.com/survey-core/survey.core.min.js"></script>
 <script src="https://unpkg.com/survey-js-ui/survey-js-ui.min.js"></script>
+<script src="https://unpkg.com/survey-core/survey.i18n.min.js"></script>
 
 <!-- (Optional) Predefined theme configurations -->
 <script src="https://unpkg.com/survey-core/themes/index.min.js"></script>
@@ -25,6 +26,7 @@
 <!-- Survey Creator resources -->
 <script src="https://unpkg.com/survey-creator-core/survey-creator-core.min.js"></script>
 <script src="https://unpkg.com/survey-creator-js/survey-creator-js.min.js"></script>
+<script src="https://unpkg.com/survey-creator-core/i18n/norwegian.js"></script>
 
 <script src="{% static 'surveys/js/app.js' %}"></script>
 {% endblock body_javascript %}
