--- a/src/dms/core/templates/core/partials/navigation.html
+++ b/src/dms/core/templates/core/partials/navigation.html
@@ -9,7 +9,7 @@
     </div>
     <div class="flex items-center gap-8 2xsm:gap-7 text-sm font-bold">
       <div>
-        <a href="{% url 'projects:project_list' %}">Projects</a>
+        <a href="{% url 'projects:project_list' %}"><i class="fas fa-people-group"></i> Projects</a>
       </div>
       {% if user.is_authenticated %}
         {% include 'core/partials/user-dropdown.html' %}
