fix: tag rendering in project detail

--- a/src/dms/projects/templates/projects/project_detail.html
+++ b/src/dms/projects/templates/projects/project_detail.html
@@ -20,7 +20,7 @@
         <tbody>
             <tr>
                 <td>Tags</td>
-                <td>{{ project.tags.all }}</td>
+                <td>{{ project.tags.all|join:", " }}</td>
             </tr>
             <tr>
                 <td>Category</td>
