chg: link from project to dms

--- a/src/dms/projects/templates/projects/project_detail.html
+++ b/src/dms/projects/templates/projects/project_detail.html
@@ -83,6 +83,8 @@
 <div class="flex mt-5 gap-4">
     {% if project.dmp %}
     <a class="btn btn-secondary" href="{% url 'projects:dmp_detail' pk=project.dmp.id %}">DMP</a>
+    {% else %}
+    <a class="btn btn-secondary" href="{% url 'projects:dmp_create' %}?project={{project.pk}}">Create a DMP</a>
     {% endif %}
     {% if can_edit_project %}
     <a class="btn btn-primary" href="{% url 'projects:project_update' pk=project.number %}">Edit</a>
