--- a/src/dms/core/templates/core/home.html
+++ b/src/dms/core/templates/core/home.html
@@ -1,1 +1,25 @@
 {% extends 'app.html' %}
+
+{% block content %}
+<div class="flex flex-col align-middle p-5">
+    <h1 class="text-center font-bold text-5xl text-secondary">Data Management System</h1>
+    <h3 class="text-center text-xl mt-2">
+        NINA DMS is a platform that collects and links projects,<br /> datasets and services about data
+    </h3>
+</div>
+
+<div class="mx-auto max-w-none p-5 px-10 my-2">
+    <div class="flex flex-row gap-8">
+        <a class="basis-1/3 flex flex-col bg-white p-5 rounded items-center no-underline" href="{% url 'projects:project_list' %}">
+            <i class="fas fa-people-group fa-4x text-secondary"></i>
+            <div class="text-2xl mt-3 font-semibold uppercase">Projects</div>
+        </a>
+        {% if request.user.is_authenticated %}
+        <a class="basis-1/3 flex flex-col bg-white p-5 rounded items-center no-underline" href="{% url 'projects:dmp_list' %}">
+            <i class="fas fa-file-shield fa-4x text-secondary"></i>
+            <div class="text-2xl mt-3 font-semibold uppercase">My DMP<span class="text-lg">s</span></div>
+        </a>
+        {% endif %}
+    </div>
+</div>
+{% endblock %}
