feat: markdown answers

--- a/src/dms/projects/templates/projects/dmp_detail.html
+++ b/src/dms/projects/templates/projects/dmp_detail.html
@@ -62,6 +62,8 @@
 <script type="text/javascript" src="https://unpkg.com/survey-core/survey.core.min.js"></script>
 <script type="text/javascript" src="https://unpkg.com/survey-js-ui/survey-js-ui.min.js"></script>
 <script src="https://unpkg.com/survey-core/survey.i18n.min.js"></script>
+<script src="https://unpkg.com/dompurify@3.2.4/dist/purify.min.js"></script>
+<script src="https://unpkg.com/marked@15.0.7/marked.min.js"></script>
 
 <script src="{% static 'projects/dmp.js' %}"></script>
 {% endif %}
