--- a/src/dms/theme/templates/theme/home.html
+++ b/src/dms/theme/templates/theme/home.html
@@ -14,6 +14,10 @@
             <i class="fas fa-people-group fa-4x text-secondary"></i>
             <div class="text-2xl mt-3 font-semibold uppercase">Projects</div>
         </a>
+        <a class="basis-1/3 flex flex-col bg-white p-5 rounded items-center no-underline" href="{% url 'datasets:dataset_list' %}">
+            <i class="fas fa-database fa-4x text-secondary"></i>
+            <div class="text-2xl mt-3 font-semibold uppercase">Datasets</div>
+        </a>
         {% if request.user.is_authenticated %}
         <a class="basis-1/3 flex flex-col bg-white p-5 rounded items-center no-underline" href="{% url 'projects:dmp_list' %}">
             <i class="fas fa-file-shield fa-4x text-secondary"></i>
