--- a/src/dms/datasets/templates/datasets/dataset_detail.html
+++ b/src/dms/datasets/templates/datasets/dataset_detail.html
@@ -8,7 +8,7 @@
 
 <div class="flex items-center justify-between">
     <div>
-        <h1 class="text-3xl font-bold">{{ dataset }}</h1>
+        <h1 class="text-4xl font-bold">{{ dataset }}</h1>
         <p class="text-sm text-gray-700">
             Created at: {{dataset.created_at}} &bull;
             Last Modified: {{dataset.last_modified_at}}
@@ -20,8 +20,20 @@
         <a class="btn btn-primary" href="{% url 'datasets:dataset_update_metadata' pk=dataset.id %}">Edit Metadata</a>
     </div>
 </div>
-<div id="metadata-wrapper">
-    <c-json-object-viewer :dict="dataset.metadata"></c-json-object-viewer>
-</div>
+
+<c-accordion type='multiple' open="{'item-1': true, 'item-2': true}" class="mt-4">
+    <c-accordion.item value='item-1'>
+        <c-accordion.trigger value='item-1' class="text-2xl font-bold">Metadata</c-accordion.trigger>
+        <c-accordion.content value='item-1'>
+            <c-json-object-viewer :dict="dataset.metadata"></c-json-object-viewer>
+        </c-accordion.content>
+    </c-accordion.item>
+    <c-accordion.item value='item-2'>
+        <c-accordion.trigger value='item-2' class="text-2xl font-bold">Resources</c-accordion.trigger>
+        <c-accordion.content value='item-2'>
+        </c-accordion.content>
+    </c-accordion.item>
+</c-accordion>
+
 
 {% endblock article %}
