--- a/src/dms/theme/templates/cotton/navigation_menu/list.html
+++ b/src/dms/theme/templates/cotton/navigation_menu/list.html
@@ -1,5 +1,5 @@
 <ul
-  class="flex flex-1 list-none items-center justify-center gap-1 {% if class %}{{ class }}{% endif %}"
+  class="flex flex-1 list-none {% if class %}{{ class }}{% else %}items-center justify-center gap-1{% endif %}"
   {{ attrs }}
 >
   {{ slot }}
