--- a/src/dms/datasets/templates/datasets/dataset_detail.html
+++ b/src/dms/datasets/templates/datasets/dataset_detail.html
@@ -17,6 +17,7 @@
     </div>
     <div class="flex gap-4">
         {% if dataset.project %}<a class="btn btn-primary" href="{% url 'projects:project_detail' pk=dataset.project_id %}">Project</a>{% endif %}
+        <a class="btn btn-primary" href="{% url 'datasets:dataset_relationship_list' pk=dataset.id %}">Relationships</a>
         <a class="btn btn-primary" href="{% url 'datasets:dataset_update' pk=dataset.id %}">Edit</a>
         <a class="btn btn-primary" href="{% url 'datasets:dataset_update_metadata' pk=dataset.id %}">Edit Metadata</a>
     </div>
