--- a/src/dms/datasets/templates/datasets/datasetrelationship_list.html
+++ b/src/dms/datasets/templates/datasets/datasetrelationship_list.html
@@ -5,13 +5,12 @@
 {% block article %}
     <h3 class="text-4xl mb-5">Manage relationships</h3>
     <div class="flex gap-5 mb-5">
+        <button class="btn btn-default" type="button" hx-get="{% url 'datasets:dataset_relationship_create' dataset_pk=view.kwargs.dataset_pk %}" hx-target="#forms" hx-swap="afterbegin">
+            Add new relationship
+        </button>
     </div>
 
-    <button class="btn btn-default" type="button" hx-get="{% url 'datasets:dataset_relationship_create' dataset_pk=view.kwargs.dataset_pk %}" hx-target="#forms" hx-swap="afterbegin">
-        Add new relationship
-    </button>
-
-    <div id="forms" class="flex flex-col gap-4">
+    <div id="forms" class="flex flex-col gap-4 mt-5">
         {% for object in object_list %}
         <div hx-target="this" hx-swap="outerHTML" hx-trigger="load" hx-get="{% url 'datasets:dataset_relationship_update' dataset_pk=view.kwargs.dataset_pk pk=object.pk %}" hx-indicator="#spinner_{{object.id}}">
             <i id="spinner_{{object.id}}" class="fas fa-spinner fa-spin"></i>
@@ -22,6 +21,8 @@
 
 {% block body_javascript %}
 {{ block.super }}
-
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"
+    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+    crossorigin="anonymous"></script>
 {% htmx_script %}
 {% endblock body_javascript %}
