--- a/src/dms/theme/static_src/src/styles.css
+++ b/src/dms/theme/static_src/src/styles.css
@@ -116,10 +116,10 @@ table.table thead th.asc.orderable a::after {
 }
 
 .htmx-indicator {
-  display: none;
+  opacity: 0;
 }
 
 .htmx-request .htmx-indicator,
 .htmx-request.htmx-indicator {
-  display: inline-block;
+  opacity: 1;
 }
