--- a/src/dms/datasets/templates/datasets/partials/form.html
+++ b/src/dms/datasets/templates/datasets/partials/form.html
@@ -1,6 +1,6 @@
 {% load crispy_forms_tags static %}
 
-<div hx-target="this" hx-swap="outerHTML">
+<div hx-target="this">
     <div class="card bg-base-100 shadow-xl">
         <div class="card-body">
         {% if object %}
@@ -8,21 +8,22 @@
             {% csrf_token %}
             <div class="flex gap-4 items-center">
                 {{ form | crispy }}
-                <button class="btn btn-primary" type="submit" hx-post="{% url 'datasets:dataset_relationship_update' dataset_pk=view.kwargs.dataset_pk pk=object.pk %}" hx-indicator="spinner_{{object.id}}">
-                    Update <i id="spinner_{{object.id}}" class="fas fa-spinner fa-spin htmx-indicator"></i>
+                <button class="btn btn-primary" type="submit" hx-post="{% url 'datasets:dataset_relationship_update' dataset_pk=view.kwargs.dataset_pk pk=object.pk %}" hx-swap="none" hx-indicator="#spinner_{{object.id}}">
+                    Update
                 </button>
-                <button class="btn btn-error" type="submit" hx-post="{% url 'datasets:dataset_relationship_delete' dataset_pk=view.kwargs.dataset_pk pk=object.pk %}" hx-confirm="Are you sure you wish to delete this relationship?">
-                    Delete <i id="spinner_{{object.id}}" class="fas fa-spinner fa-spin htmx-indicator"></i>
+                <button class="btn btn-error" type="submit" hx-post="{% url 'datasets:dataset_relationship_delete' dataset_pk=view.kwargs.dataset_pk pk=object.pk %}" hx-swap="outerHTML" hx-indicator="#spinner_{{object.id}}" hx-confirm="Are you sure you wish to delete this relationship?">
+                    Delete
                 </button>
+                <i id="spinner_{{object.id}}" class="fas fa-spinner fa-spin htmx-indicator"></i>
         </div>
 
         </form>
         {% else %}
-        <form method="POST" action="">
+        <form method="POST" action="" id="create-form">
             {% csrf_token %}
             {{ form | crispy }}
-            <button class="btn btn-primary" hx-post="{% url 'datasets:dataset_relationship_create' dataset_pk=view.kwargs.dataset_pk %}" hx-indicator="#spinner_{% now 'U' %}">
-                Create <i id="spinner_{% now 'U' %}" class="fas fa-spinner fa-spin htmx-indicator"></i>
+            <button class="btn btn-primary" hx-post="{% url 'datasets:dataset_relationship_create' dataset_pk=view.kwargs.dataset_pk %}" hx-swap="outerHTML" hx-indicator="#spinner_create">
+                Create <i id="spinner_create" class="fas fa-spinner fa-spin htmx-indicator"></i>
             </button>
         </form>
         {% endif %}
@@ -30,14 +31,3 @@
     </div>
 </div>
 {{ form.media }}
-<!-- <script>
-    htmx.on("htmx:afterSettle", (e) => {
-        setTimeout(() => {
-            if (typeof dal_init === 'undefined') {
-                window.dispatchEvent(new Event('load'));
-                $('select[data-autocomplete-light-function]').select2();
-                dal_init = true;
-            }
-        }, 200);
-    })
-</script> -->
