--- a/src/dms/datasets/templates/datasets/resource_detail.html
+++ b/src/dms/datasets/templates/datasets/resource_detail.html
@@ -21,6 +21,8 @@
     </div>
 </div>
 
+<p class="mt-5">Resource path: <a href="{{ object.get_resource_path }}">{{ object.get_resource_path }}</a></p>
+
 <c-accordion type='multiple' open="{'item-1': true, 'item-2': true , 'schema': true}" class="mt-4">
     <c-accordion.item value='item-1'>
         <c-accordion.trigger value='item-1' class="text-2xl font-bold">Metadata</c-accordion.trigger>
