--- a/src/dms/datasets/templates/datasets/resource_form.html
+++ b/src/dms/datasets/templates/datasets/resource_form.html
@@ -5,6 +5,7 @@
 {% block article %}
     <h3 class="text-4xl mb-5">{{ object }}</h3>
     <div class="flex gap-5 mb-5">
+        <c-action-form action="{% url 'datasets:resource_infer_schema' pk=object.pk dataset_pk=object.dataset_id %}">Infer metadata</c-action-form>
     </div>
     {% crispy form %}
 {% endblock %}
