feat(services): resource list page

--- a/src/dms/services/templates/services/resource_filter.html
+++ b/src/dms/services/templates/services/resource_filter.html
@@ -1,9 +1,8 @@
 {% extends 'base_filter.html' %}
 
-{% block page-title %}Services{% endblock %}
+{% block page-title %}Service Resources{% endblock %}
 
 {% block page-actions %}
 <div class="flex">
-    <a href="{% url 'services:resource_list' %}">Resources</a>
 </div>
 {% endblock page-actions %}
