--- a/src/dms/datasets/templates/datasets/resource_detail.html
+++ b/src/dms/datasets/templates/datasets/resource_detail.html
@@ -22,19 +22,13 @@
     </div>
 </div>
 
-<p class="mt-5">Resource path: <a href="{{ object.get_resource_path }}">{{ object.get_resource_path }}</a></p>
+<p class="mt-5">Resource path: <a href="{{ object.uri }}">{{ object.uri }}</a></p>
 
 <c-accordion type='multiple' open="{'item-1': true, 'item-2': true , 'schema': true}" class="mt-4">
     <c-accordion.item value='item-1'>
         <c-accordion.trigger value='item-1' class="text-2xl font-bold">Metadata</c-accordion.trigger>
         <c-accordion.content value='item-1'>
             <c-json-object-viewer :dict="resource.metadata"></c-json-object-viewer>
-        </c-accordion.content>
-    </c-accordion.item>
-    <c-accordion.item value='schema'>
-        <c-accordion.trigger value='schema' class="text-2xl font-bold">Schema</c-accordion.trigger>
-        <c-accordion.content value='schema'>
-            <c-json-object-viewer :dict="resource.schema"></c-json-object-viewer>
         </c-accordion.content>
     </c-accordion.item>
     <c-accordion.item value='item-2'>
