--- a/src/dms/datasets/templates/datasets/tabularresource_detail.html
+++ b/src/dms/datasets/templates/datasets/tabularresource_detail.html
@@ -36,7 +36,24 @@
             <c-json-object-viewer :dict="object.last_sync"></c-json-object-viewer>
         </c-accordion.content>
     </c-accordion.item>
+    {% if object.metadata.driver == 'Parquet' %}
+    <c-accordion.item value='item-2'>
+        <c-accordion.trigger value='item-2' class="text-2xl font-bold">Preview</c-accordion.trigger>
+        <c-accordion.content value='item-2'>
+            <div id="parquet-preview" data-url="{{ object.uri }}"></div>
+        </c-accordion.content>
+    </c-accordion.item>
+    {% endif %}
 </c-accordion>
 
 
 {% endblock article %}
+
+{% block body_javascript %}
+    {{ block.super }}
+    {% if object.metadata.driver == 'Parquet' %}
+    <link rel="stylesheet" href="{% static 'css/parquet.css' %}">
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script src="{% static 'js/parquet-preview.js' %}" data-type="module" type="text/babel"></script>
+    {% endif %}
+{% endblock body_javascript %}
