--- a/src/dms/datasets/templates/datasets/dataset_detail.html
+++ b/src/dms/datasets/templates/datasets/dataset_detail.html
@@ -50,24 +50,26 @@
                     </c-navigation-menu.item>
                     <c-navigation-menu.item>
                         <c-navigation-menu.link class="bg-blue-500 text-white" href='{% url "datasets:mapresource_create" dataset_pk=dataset.pk %}'>
-                            <i class="fas fa-map"></i> Map Resource
+                            <i class="fas fa-plus"></i> Map Resource <i class="fas fa-map"></i>
                         </c-navigation-menu.link>
                     </c-navigation-menu.item>
                     <c-navigation-menu.item>
                         <c-navigation-menu.link class="bg-green-500 text-white" href='{% url "datasets:rasterresource_create" dataset_pk=dataset.pk %}'>
-                            <i class="fas fa-image"></i> Raster Resource
+                            <i class="fas fa-plus"></i> Raster Resource <i class="fas fa-image"></i>
                         </c-navigation-menu.link>
                     </c-navigation-menu.item>
                     <c-navigation-menu.item>
                         <c-navigation-menu.link class="bg-purple-500 text-white" href='{% url "datasets:tabularresource_create" dataset_pk=dataset.pk %}'>
-                            <i class="fas fa-table"></i> Tabular Resource
+                            <i class="fas fa-plus"></i> Tabular Resource <i class="fas fa-table"></i>
                         </c-navigation-menu.link>
                     </c-navigation-menu.item>
+                    {% comment %}
                     <c-navigation-menu.item>
                         <c-navigation-menu.link class="bg-orange-500 text-white" href='{% url "datasets:partitionedresource_create" dataset_pk=dataset.pk %}'>
-                            <i class="fas fa-th-large"></i> Partitioned Resource
+                            <i class="fas fa-plus"></i><i class="fas fa-th-large"></i> Partitioned Resource
                         </c-navigation-menu.link>
                     </c-navigation-menu.item>
+                    {% endcomment %}
                 </c-navigation-menu.list>
             </c-navigation-menu>
             {% render_table resource_table %}
