--- a/src/dms/datasets/templates/datasets/resource_detail.html
+++ b/src/dms/datasets/templates/datasets/resource_detail.html
@@ -1,46 +1,1 @@
-{% extends 'app.html' %}
-{% load rules %}
-{% load static %}
-{% load language_tags %}
-{% load i18n %}
-
-{% block article %}
-
-
-<div class="flex items-center justify-between">
-    <div>
-        <h1 class="text-4xl font-bold">{{ object }}</h1>
-        <p class="text-sm text-gray-700">
-            Created at: {{object.created_at}} &bull;
-            Last Modified: {{object.last_modified_at}}
-        </p>
-    </div>
-    <div class="flex gap-4">
-        <a class="btn btn-primary" href="{% url 'datasets:dataset_detail' pk=object.dataset_id %}">Dataset</a>
-        <a class="btn btn-primary" href="{{ object.edit_url }}">Edit</a>
-        {% has_perm 'datasets.delete_resource' user object as can_delete %}
-        {% if can_delete %}
-        <a class="btn btn-danger" href="{% url 'datasets:resource_delete' dataset_pk=object.dataset_id pk=object.pk %}">Delete</a>
-        {% endif %}
-    </div>
-</div>
-
-<p class="mt-5">Resource path: <a href="{{ object.uri }}">{{ object.uri }}</a></p>
-
-<c-accordion type='multiple' open="{'item-1': true, 'item-2': true , 'schema': true}" class="mt-4">
-    <c-accordion.item value='item-1'>
-        <c-accordion.trigger value='item-1' class="text-2xl font-bold">Metadata</c-accordion.trigger>
-        <c-accordion.content value='item-1'>
-            <c-json-object-viewer :dict="object.metadata"></c-json-object-viewer>
-        </c-accordion.content>
-    </c-accordion.item>
-    <c-accordion.item value='item-1'>
-        <c-accordion.trigger value='item-1' class="text-2xl font-bold">Last sync</c-accordion.trigger>
-        <c-accordion.content value='item-1'>
-            <c-json-object-viewer :dict="object.last_sync"></c-json-object-viewer>
-        </c-accordion.content>
-    </c-accordion.item>
-</c-accordion>
-
-
-{% endblock article %}
+{% extends 'datasets/resource_detail_base.html' %}
