--- a/src/dms/datasets/templates/datasets/dataset_filter.html
+++ b/src/dms/datasets/templates/datasets/dataset_filter.html
@@ -4,6 +4,7 @@
 
 {% block page-actions %}
 <div class="flex gap-4">
+    <a class="btn btn-secondary" href="{% url 'datasets:resource_list' %}">View Resources</a>
     <a class="btn btn-primary" href="{% url 'datasets:dataset_create' %}">Register</a>
 </div>
 {% endblock page-actions %}
